Swagger that works with get and getbyID
